--- a/roles/deploy/tasks/apply_configuration.yaml
+++ b/roles/deploy/tasks/apply_configuration.yaml
@@ -12,7 +12,7 @@
 
 - name: Set default state
   ansible.builtin.set_fact:
-    deploy_state: 'merged'
+    deploy_state: "merged"
   when: deploy_state is not defined
 
 - name: Include tasks
