--- a/roles/deploy/tasks/write_to_file.yaml
+++ b/roles/deploy/tasks/write_to_file.yaml
@@ -3,12 +3,12 @@
   ansible.builtin.file:
     path: "{{ deploy_inventory_path }}/host_vars/{{ inventory_hostname }}"
     state: directory
-    mode: '0777'
+    mode: "0777"
   delegate_to: localhost
 
 - name: Write each resource to a file
   ansible.builtin.copy:
     content: "{{ {res: deploy_result['gathered']} | to_nice_yaml }}"
     dest: "{{ deploy_inventory_path }}/host_vars/{{ inventory_hostname }}/{{ res }}.yaml"
-    mode: '0777'
+    mode: "0777"
   delegate_to: localhost
