--- a/roles/detect/tasks/detect.yaml
+++ b/roles/detect/tasks/detect.yaml
@@ -30,7 +30,7 @@
 
 - name: Set default state as 'overridden'
   ansible.builtin.set_fact:
-    detect_state: 'overridden'
+    detect_state: "overridden"
   when: detect_state is not defined
 
 - name: Include check_drift task
