--- a/tests/integration/targets/base_deploy/tasks/main.yaml
+++ b/tests/integration/targets/base_deploy/tasks/main.yaml
@@ -11,7 +11,7 @@
     - name: Set resources
       ansible.builtin.set_fact:
         test_resources:
-          - 'interfaces'
+          - "interfaces"
 
     - name: Set local data store
       ansible.builtin.set_fact:
