--- a/tests/integration/targets/base_detect/tasks/main.yaml
+++ b/tests/integration/targets/base_detect/tasks/main.yaml
@@ -11,7 +11,7 @@
     - name: Set resources
       ansible.builtin.set_fact:
         test_resources:
-          - 'interfaces'
+          - "interfaces"
 
     - name: Set local data store
       ansible.builtin.set_fact:
@@ -37,7 +37,6 @@
       vars:
         resources: "{{ test_resources }}"
         data_store: "{{ test_data_store }}"
-    
 
     - name: Assert drift detection result
       ansible.builtin.assert:
