--- a/tests/integration/targets/base_remediate/tasks/main.yaml
+++ b/tests/integration/targets/base_remediate/tasks/main.yaml
@@ -11,7 +11,7 @@
     - name: Set resources
       ansible.builtin.set_fact:
         test_resources:
-          - 'interfaces'
+          - "interfaces"
 
     - name: Set data data_store
       ansible.builtin.set_fact:
